# iroh-ssh

./: .gitignore  CUSTOM_RELAY.md  Cargo.toml  README.md  README_es.md  README_pt.md  iroh-ssh-server.service
.github/workflows/: build.yml
examples/: relay_dns_server.rs
nix/: package.nix
service/: install_linux.sh  uninstall_linux.sh
src/: api.rs  cli.rs  lib.rs  main.rs  ssh.rs
src/service/: linux.rs  mod.rs  windows.rs
src/service/windows/: firewall.rs
tests/relay_urls/: Makefile  relay.conf
win/: install.ps1  uninstall.ps1
