[package]
name = "iroh-ssh"
description = "ssh without ip"
license = "MIT"
authors = ["Zacharias Boehler <rustonbsd@mailfence.com>"]
repository = "https://github.com/rustonbsd/iroh-ssh"
readme = "README.md"
keywords = ["networking"]
categories = ["network-programming"]
version = "0.2.8"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
iroh = "0.94"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.9"
tokio-stream = { version = "0.1.15", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "ansi"] }
tracing-appender = "0.2"
tokio = { version = "1.48", features = [
    "macros",
    "io-util",
    "sync",
    "rt",
] }
clap = { version = "4.5.48", features = ["derive"] }
homedir = "0.3.6"
whoami = "1.6.1"
z32 = "1.3"
runas = "1.2.0"
tempfile = "3.23.0"
self-runas = "0.1"

[target.'cfg(windows)'.dependencies.windows-service]
version = "0.8.0"
[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Power",
    "Win32_System_RemoteDesktop",
    "Win32_System_Services",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
]
[profile.release]
opt-level = 3
lto = true
panic = "abort"
